hphp/hack/test/typecheck/inout/bad_inout_use_arg20.php
<?hh

function f(inout string $s): void {
  $s = 'z';
}

function test(): void {
  $x = 'foobar';
  f(inout $x[5]);
}
